--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ theme_mode: dark # [light | dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: "https://chirpy-img.netlify.app"
+img_cdn: "https://cyc4d.github.io"
 
 # the avatar on sidebar, support local or CORS resources
 avatar: "/assets/img/CYC4D.jpeg"
