--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ timezone: Asia/Seoul
 
 title: CYC4D Blog # the main title
 
-tagline: Blog First Setting # it will display as the sub-title
+tagline: Hi 👋 <br> [![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2FAR35-youn%2Fhit-counter&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false)](https://hits.seeyoufarm.com)
+ # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   CYC4D Blog.
