--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: CYC4D Blog # the main title
 tagline: Hi 👋 <br> DevSecOps  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  CYC4D Blog.
+  CYC4D
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -38,8 +38,8 @@ social:
   email: CYC4D@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
     - https://github.com/CYC4D # change to your github homepage
+    - https://twitter.com/username # change to your twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
