--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: CYC4D Blog # the main title
 
-tagline: Hi 👋 <br> DevSecOps  # it will display as the sub-title
+tagline: Everything you can imagine is real. 🔥 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   CYC4D
@@ -99,10 +99,10 @@ toc: true
 
 comments:
   # Global switch for the post comment system. Keeping it empty means disabled.
-  provider: disqus # [disqus | utterances | giscus]
+  provider: # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
-    shortname: cyc4d # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
